2005-08-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/DynamicAny/AnySeqHelper.java,
        org/omg/DynamicAny/NameDynAnyPairSeqHelper.java,
        org/omg/DynamicAny/NameValuePairHelper.java,
        org/omg/DynamicAny/NameDynAnyPairHelper.java,
        org/omg/DynamicAny/NameValuePairSeqHelper.java,
        org/omg/DynamicAny/DynAnySeqHelper.java,
        gnu/CORBA/DynAnySeqHolder.java,
        gnu/CORBA/NameDynAnyPairSeqHolder.java,
        gnu/CORBA/NameDynAnyPairHolder.java,
        gnu/CORBA/NameValuePairSeqHolder.java,
        gnu/CORBA/NameValuePairHolder.java: New files.

2005-08-07  Ito Kazumitsu <kaz@maczuka.gcd.org>

	Fixes bug #22929
	* libraries/javalib/java/net/NetworkInterface.java
	(condense): New static private method.
	(getNetworkInterfaces): Call condense().
	(getByName, getByInetAddress): Call getNetworkInterfaces()
	so that condensed result may be returned.

	* vm/reference/java/net/VMNetworkInterface.java (getInterfaces):
	Clarify return value in documentation.

2005-08-07  Mark Wielaard  <mark@klomp.org>

	Fixes bug #22920
	* java/net/DatagramSocket.java (DatagramSocket(SocketAddress)):
	Use gnu.classpath.SystemProperties to get impl.prefix.

2005-08-03  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * gnu/CORBA/CDR/noHeaderInput.java,
        gnu/CORBA/gnuValueHolder.java,
        gnu/CORBA/DynAn/gnuDynAny.java,
        gnu/CORBA/DynAn/gnuDynArray.java,
        gnu/CORBA/DynAn/gnuDynSequence.java,
        gnu/CORBA/DynAn/gnuDynValueBox.java,
        gnu/CORBA/DynAn/abstractRecord.java,
        gnu/CORBA/DynAn/gnuDynAnyFactory.java,
        gnu/CORBA/DynAn/gnuDynValue.java,
        gnu/CORBA/DynAn/gnuDynStruct.java,
        gnu/CORBA/DynAn/anyDivideable.java,
        gnu/CORBA/DynAn/anyUndivideable.java,
        gnu/CORBA/DynAn/gnuDynEnum.java,
        gnu/CORBA/DynAn/abstractDynAny.java,
        gnu/CORBA/DynAn/gnuDynFixed.java,
        gnu/CORBA/DynAn/valueChangedListener.java,